tests/ui/missing_intopy.stderr
error[E0599]: the method `into_result` exists for struct `Blah`, but its trait bounds were not satisfied
   --> tests/ui/missing_intopy.rs:3:1
    |
1   | struct Blah;
    | ------------
    | |
    | method `into_result` not found for this
    | doesn't satisfy `Blah: IntoPy<Py<PyAny>>`
    | doesn't satisfy `Blah: IntoResult<Result<Blah, PyErr>>`
2   |
3   | #[pyo3::pyfunction]
    | ^^^^^^^^^^^^^^^^^^^ method cannot be called on `Blah` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `Blah: IntoPy<Py<PyAny>>`
            which is required by `Blah: IntoResult<Result<Blah, PyErr>>`
            `&Blah: IntoPy<Py<PyAny>>`
            which is required by `&Blah: IntoResult<Result<&Blah, PyErr>>`
            `&mut Blah: IntoPy<Py<PyAny>>`
            which is required by `&mut Blah: IntoResult<Result<&mut Blah, PyErr>>`
note: the following trait must be implemented
   --> src/conversion.rs
    |
    | / pub trait IntoPy<T>: Sized {
    | |     /// Performs the conversion.
    | |     fn into_py(self, py: Python<'_>) -> T;
    | | }
    | |_^
    = note: this error originates in the attribute macro `pyo3::pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
